--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "body-parser": "^1.20.2",
     "handlebars": "^4.7.8"
   },
+  "puppeteer": {
+    "skip_chromium_download": true
+  },
   "engines": {
     "node": "18.x"
   }
