--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "PDF generator for Declaration of Decontamination (DONC)",
   "main": "server.js",
   "scripts": {
-    "start": "PUPPETEER_SKIP_DOWNLOAD=true node server.js"
+    "start": "cross-env PUPPETEER_SKIP_DOWNLOAD=true node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
     "handlebars": "^4.7.8",
-    "puppeteer": "^21.3.8"
+    "puppeteer": "^21.3.8",
+    "cross-env": "^7.0.3"
   },
   "puppeteer": {
     "skip_chromium_download": true
