--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,29 +2,29 @@ name: Deploy to AWS App Runner
 
 on:
   push:
-    branches: [main]
+    branches: [master]  # angepasst für deinen Branch
 
 jobs:
   deploy:
-    name: Build & Deploy Docker Image
+    name: Node.js App Runner Build (Code Repo Mode)
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout source code
         uses: actions/checkout@v3
 
-      - name: Log in to Amazon ECR (optional if using ECR)
-        if: false  # remove if using ECR
-        uses: aws-actions/amazon-ecr-login@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Install dependencies
+        run: npm install
 
-      - name: Build Docker image
+      - name: Build and test (optional)
+        run: echo "No build step needed for Express/Puppeteer"
+
+      - name: Info only – AWS App Runner will deploy this repo
         run: |
-          docker build -t donc-pdf-server .
-
-      - name: Deploy to App Runner (manual step required)
-        run: |
-          echo "Login to AWS Console and connect this repo to App Runner. This action builds the image only."
-          echo "You can configure auto-deployment from GitHub in App Runner UI."
+          echo "App Runner will auto-deploy this branch via Source Code mode."
+          echo "Ensure package.json and Procfile are correct for Node.js runtime."
