--- a/package.json
+++ b/package.json
@@ -10,13 +10,9 @@
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
     "handlebars": "^4.7.8",
-    "puppeteer": "^21.3.8",
-    "cross-env": "^7.0.3"
-  },
-  "puppeteer": {
-    "skip_chromium_download": true
+    "puppeteer": "^22.8.3"
   },
   "engines": {
-    "node": "18.x"
+    "node": "">=18.0.0"
   }
 }
