--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
     "handlebars": "^4.7.8",
-    "puppeteer": "^22.8.3"
+    "puppeteer": "^22.8.3",
+    "cross-env": "^7.0.3"
   },
   "engines": {
     "node": ">=18.0.0"
