--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "PDF generator for Declaration of Decontamination (DONC)",
   "main": "server.js",
-  "scripts": {
-    "start": "cross-env PUPPETEER_SKIP_DOWNLOAD=true node server.js"
-  },
+"scripts": {
+  "postinstall": "npx puppeteer browsers install chrome",
+  "start": "node server.js"
+},
   "dependencies": {
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
