--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "body-parser": "^1.20.2",
     "handlebars": "^4.7.8",
     "puppeteer": "^22.8.3",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
+    "fs-extra": "^11.2.0"
   },
   "engines": {
     "node": ">=18.0.0"
