--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "puppeteer": "^22.8.3",
     "cross-env": "^7.0.3",
     "multer": "^1.4.5-lts.1",
-    "fs-extra": "^11.2.0"
+    "fs-extra": "^11.2.0",
+  "adm-zip": "^0.5.10"
   },
   "engines": {
     "node": ">=18.0.0"
