--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -1,6 +1,5 @@
 {
   "name": "admin-app",
-  "homepage": "/admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,8 +7,14 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
   },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
   }
 }
+
