--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "grapesjs": "^0.22.7",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
