--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -8,7 +8,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "grapesjs": "^0.22.7",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "grapesjs-preset-webpage": "^1.0.2",
+    "grapesjs-plugin-forms": "^0.1.7",
+    "grapesjs-parser-postcss": "^0.1.5"    
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
