--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "1.0.0",
   "description": "PDF generator for Declaration of Decontamination (DONC)",
   "main": "server.js",
-"scripts": {
-  "postinstall": "npx puppeteer browsers install chrome",
-  "start": "node server.js"
-},
+  "scripts": {
+    "postinstall": "npx puppeteer browsers install chrome",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+
+    "install-admin": "if [ -d \"admin-app\" ]; then cd admin-app && npm install; else echo 'admin-app missing, skipping install'; fi",
+    "build-admin": "if [ -d \"admin-app\" ]; then cd admin-app && npm run build; else echo 'admin-app missing, skipping build'; fi",
+    "build": "npm run install-admin && npm run build-admin && npm install"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
@@ -20,5 +25,8 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
   }
 }
