--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "multer": "^1.4.5-lts.1",
     "fs-extra": "^11.2.0",
     "adm-zip": "^0.5.10",
-    "mime-types": "^2.1.35"
+    "mime-types": "^2.1.35",
+    "liquidjs": "^10.21.0",
+    "nunjucks": "^3.2.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
