font-family direkt aus der Schriftdatei ausgelesen (nicht mehr Dateinamen)

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "adm-zip": "^0.5.10",
     "mime-types": "^2.1.35",
     "liquidjs": "^10.21.0",
-    "nunjucks": "^3.2.4"
+    "nunjucks": "^3.2.4",
+    "fontkit": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
