--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     
     "build-admin": "node -e \"const fs = require('fs'); const { execSync } = require('child_process'); if (fs.existsSync('admin-app')) { execSync('cd admin-app && npm run build', { stdio: 'inherit' }); } else { console.log('admin-app missing, skipping build'); }\"",
     
-    "build": "npm run install-admin && npm run build-admin && npm install"
+    "build": "npm run install-admin && npm run build-admin && npm install",
+     "docs": "node -e \"const yaml = require('js-yaml'); const fs = require('fs'); const doc = yaml.load(fs.readFileSync('./openapi/pdf-server.openapi.yaml', 'utf8')); console.log(JSON.stringify(doc, null, 2))\""
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -26,7 +27,9 @@
     "mime-types": "^2.1.35",
     "liquidjs": "^10.21.0",
     "nunjucks": "^3.2.4",
-    "fontkit": "^2.0.4"
+    "fontkit": "^2.0.4",
+    "swagger-ui-express": "^5.0.1",
+    "swagger-jsdoc": "^6.2.8"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
