--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "swagger-jsdoc": "^6.2.8",
     "js-yaml": "^4.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5" // Neu: Umgebungsvariablen
+    "dotenv": "^16.4.5" 
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
